# multimodal-extraction-service

./: .env.example  .gitignore  README.md  pyproject.toml
data/input/: customer_text_fr.txt  manifest.json
data/output/: drawing_result-before-improved-prompt.json  drawing_result.json  eval_results.json  scope_brief.json  text_note_001-before-assumption-fixes.json  text_note_001-before-language-normalization.json  text_note_001.json  vision_photo_01.json  vision_photo_02.json
data/output/before-fixes/: vision_photo_01-before-improved-prompt.json
docs/: adversarial_cases.md  ai_conversation_history.md  ai_usage_log.md  code_ownership.md  cost_and_routing.md  failure_modes.md  hire_2.md  migration.md  predictions.md  reasoning_trace.md  regulatory_citations.md  rollout.md  tradeoff_sliders.md  weaknesses.md  whats_missing.md
src/scope_modeler/: __init__.py  __main__.py  cli.py
src/scope_modeler/eval/: __init__.py  harness.py
src/scope_modeler/extractors/: __init__.py  audio.py  base.py  drawing.py  photos.py  text.py  vision.py
src/scope_modeler/fusion/: __init__.py  fusion_engine.py  readiness.py
src/scope_modeler/inputs/: __init__.py  manifest.py
src/scope_modeler/llm/: __init__.py  openai_client.py  (+1 more)
tests/: test_assignment_required_cases.py  test_audio_extractor.py  test_cli.py  test_drawing_parser.py  test_eval_harness.py  test_extractor_contracts.py  test_fusion_engine.py  test_input_manifest.py  test_openai_schema.py  test_scaffold.py  test_schema_facade_migration.py  test_schema_invariants.py  test_text_extractor.py  test_vision_extractor.py
(+5 files in other folders)
